tests/baselines/reference/objectTypesIdentityWithStringIndexers(strict=true).errors.txt
objectTypesIdentityWithStringIndexers.ts(30,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(31,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(34,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(35,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(38,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(39,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(42,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(43,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(46,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(47,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(50,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(51,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(54,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(55,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(58,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(59,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(62,10): error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(63,10): error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(66,10): error TS7010: 'foo5d', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(67,10): error TS7010: 'foo5d', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(70,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(71,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(74,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(75,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(78,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(79,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(82,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(83,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(86,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(87,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(90,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(91,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(94,10): error TS7010: 'foo11b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(95,10): error TS7010: 'foo11b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(98,10): error TS7010: 'foo11c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(99,10): error TS7010: 'foo11c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(102,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(103,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(106,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(107,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(110,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(111,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(114,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(115,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(118,10): error TS7010: 'foo16', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithStringIndexers.ts(119,10): error TS7010: 'foo16', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithStringIndexers.ts (46 errors) ====
    // object types are identical structurally
    
    class A {
        [x: string]: string;
    }
    
    class B {
        [x: string]: string;
    }
    
    class C<T> {
        [x: string]: T;
    }
    
    interface I {
        [x: string]: string;
    }
    
    class PA extends A {
    }
    
    class PB extends B {
    }
    
    var a: {
        [x: string]: string;
    }
    var b: { [x: string]: string; } = { foo: '' };
    
    function foo1(x: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: A); // error
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo1b(x: B);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5(x: A);
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: B); // error
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: any) { }
    
    function foo5b(x: A);
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: any) { }
    
    function foo5c(x: A);
             ~~~~~
!!! error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5c(x: PA); // error
             ~~~~~
!!! error TS7010: 'foo5c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5c(x: any) { }
    
    function foo5d(x: A);
             ~~~~~
!!! error TS7010: 'foo5d', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5d(x: PB); // error
             ~~~~~
!!! error TS7010: 'foo5d', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5d(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I); // error
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I); // error
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<string>); // error
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // error
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // error
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo11b(x: B);
             ~~~~~~
!!! error TS7010: 'foo11b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11b(x: PA); // error
             ~~~~~~
!!! error TS7010: 'foo11b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11b(x: any) { }
    
    function foo11c(x: B);
             ~~~~~~
!!! error TS7010: 'foo11c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11c(x: PB); // error
             ~~~~~~
!!! error TS7010: 'foo11c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11c(x: any) { }
    
    function foo12(x: I);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo13(x: I);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // error
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // error
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }
    
    function foo15(x: I);
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: PA); // error
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: any) { }
    
    function foo16(x: I);
             ~~~~~
!!! error TS7010: 'foo16', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo16(x: PB); // error
             ~~~~~
!!! error TS7010: 'foo16', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo16(x: any) { }
    
    